markerBtn partial not working

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -818,7 +818,9 @@
           					</svg>
                   </div>
 
-                  <div class="marker-posn d-none text-left justify-content-md-end justify-content-start mt-4 flex-wrap">
+                  <div class="marker-posn d-none text-left justify-content-md-end justify-content-start flex-wrap">
+
+                    <div class="col-12 text-left mb-4 px-0 mt-1"><small class="badge badge-light">Click {{>markerBtn}}to change settings.</small></div>
 
                     <div class="marker-circle rounded-circle bg-info text-light border-light d-flex align-items-center justify-content-center mx-1 shadow">1</div>
                     <div class="marker-circle rounded-circle bg-warning text-dark border-light d-flex align-items-center justify-content-center mx-1 shadow">2</div>
@@ -847,8 +849,8 @@
                     </filter>
                     </defs>
                     </svg>
-                    <div class="col-12 my-2"></div>
-                    <section class="text-small text-muted">Press marker button to keep this modal here</section>
+
+
 
 
                   </div>
